--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,28 @@
 /* General Style */
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@font-face {
+  font-family: "Lato";
+  src: url(fonts/Lato-Regular.ttf);
+}
+@font-face {
+  font-family: "Brown Sugar";
+  src: url(fonts/Brown\ Sugar\ .otf);
+}
+@font-face {
+  font-family: "Better Saturday";
+  src: url(fonts/Better\ Saturday.otf);
+}
 
 html {
   box-sizing: border-box;
-
+  /* TODO font main lato, header better saturday, header brown sugar */
+  /* TODO color #ffecd2 */
+  color: #ffecd2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Better Saturday", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 *,
@@ -15,4 +31,14 @@ html {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: #ffecd2;
+  font-size: 48px;
+}
+
+a:visited {
+  color: #ffecd2;
 }
