--- a/src/index.css
+++ b/src/index.css
@@ -47,14 +47,15 @@ a:visited {
 
 .App {
   display: flex;
-  min-width: "100vw";
-  min-height: "100vh";
-  background-color: "black";
-  justify-content: "space-between";
-  align-items: "center";
-  flex-direction: "column";
-  overflow: "clip";
+  min-width: 100vw;
+  min-height: 100vh;
+  background-color: black;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  overflow: clip;
 }
+
 .background_top {
   height: 30vh;
   width: 100vw;
@@ -101,16 +102,16 @@ a:visited {
 /* Home page style */
 
 .home_container {
-  display: "flex";
-  align-items: "center";
-  flex-direction: "column";
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 /* VoiceBox page style */
 
 .voice-box_container {
-  display: "flex";
-  flex-direction: "column";
-  justify-content: "center";
-  align-items: "center";
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
