--- a/src/index.css
+++ b/src/index.css
@@ -52,10 +52,15 @@ a {
   text-decoration: none;
   color: var(--light);
   font-size: 24px;
+  font-family: var(--plain-font);
 }
 
 a:visited {
   color: var(--light);
+}
+
+h1 {
+  font-size: 3rem;
 }
 
 h2 {
@@ -121,10 +126,26 @@ h2 {
 
 .home_container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
 
   flex-grow: 1;
+}
+
+.home_links {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+}
+
+.link_subtitle {
+  font-size: 0.5rem;
+}
+.home_footer {
+  font-size: 0.5rem;
+  padding-top: 2rem;
 }
 
 /* VoiceBox page style */
@@ -173,14 +194,7 @@ h2 {
   font-family: var(--plain-font);
   border-radius: 5rem;
   text-align: center;
-  box-shadow: 0px 0px 5px 5px var(--light);
   border: none;
-}
-
-.user-identifier_input-name:focus {
-  border: none;
-  outline: none;
-  box-shadow: 0px 0px 0px 5px var(--light);
 }
 
 .user-identifier_submit {
@@ -192,15 +206,8 @@ h2 {
   font-family: var(--plain-font);
   border-radius: 5rem;
   text-align: center;
-  box-shadow: 0px 0px 5px 5px var(--light);
   border: none;
   cursor: pointer;
-}
-
-.user-identifier_submit:hover {
-  border: none;
-  outline: none;
-  box-shadow: 0px 0px 0px 5px var(--light);
 }
 
 @media only screen and (max-width: 900px) {
