--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,6 @@ html {
 a {
   text-decoration: none;
   color: var(--light);
-  font-size: 24px;
   font-family: var(--plain-font);
 }
 
@@ -59,13 +58,6 @@ a:visited {
   color: var(--light);
 }
 
-h1 {
-  font-size: 3rem;
-}
-
-h2 {
-  font-size: 1rem;
-}
 /* App style  */
 
 .App {
@@ -73,27 +65,38 @@ h2 {
   min-width: 100vw;
   min-height: 100vh;
   background-color: black;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
   overflow: clip;
 }
 
 .background_top {
-  height: 30vh;
+  height: 25vh;
   width: 100vw;
   background-image: url(./assets/background-top.webp);
   background-repeat: repeat-x;
   background-size: cover;
+  background-position: top;
+  position: fixed;
 }
 
 .background_bottom {
-  height: 30vh;
+  height: 25vh;
   width: 100vw;
   background-image: url(./assets/background-bottom.webp);
   background-size: cover;
   background-repeat: repeat-x;
   background-position: bottom;
+  position: fixed;
+  bottom: 0;
+}
+.app_footer {
+  font-family: var(--soul-font);
+  font-size: 1rem;
+  padding-bottom: 15vh;
+  text-align: center;
+  font-weight: bold;
 }
 
 @media only screen and (min-width: 1500px) {
@@ -126,26 +129,36 @@ h2 {
 
 .home_container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
-
   flex-grow: 1;
+  padding: 20vh 0 10vh 0;
+}
+.home_title {
+  font-size: 5.5rem;
 }
 
 .home_links {
+  padding-top: 5vh;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   text-align: center;
+  font-size: 2.5rem;
 }
 
 .link_subtitle {
-  font-size: 0.5rem;
+  font-size: 1rem;
+  font-style: italic;
 }
-.home_footer {
-  font-size: 0.5rem;
-  padding-top: 2rem;
+
+@media only screen and (max-width: 900px) {
+  .home_title {
+  }
+  .link_nav {
+    font-size: 0.5rem;
+  }
 }
 
 /* VoiceBox page style */
@@ -156,6 +169,7 @@ h2 {
   justify-content: space-between;
   align-items: center;
   flex-grow: 1;
+  padding: 25vh 0 25vh 0;
 }
 
 .voice-box_title {
@@ -221,4 +235,17 @@ h2 {
   .user-identifier_submit {
     font-size: 1rem;
   }
+}
+
+/* FAQs Page Style */
+
+.faqs_container {
+  font-family: var(--plain-font);
+  padding-top: 25vh;
+}
+
+.faqs_title {
+  font-family: var(--fancy-font);
+  font-size: 3rem;
+  text-align: center;
 }
